fix: .gitignore fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+####################
+# VisualStudioCode #
+####################
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+.history/
+*.vsix
+.history
+.ionide
+
+############
+# JS Stuff #
+############
+
 node_modules
