--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-order": "^6.0.2",
     "stylelint-webpack-plugin": "^4.0.0",
+    "three": "^0.149.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "typescript-eslint": "^0.0.1-alpha.0",
@@ -40,5 +41,7 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/three": "^0.149.0"
+  }
 }
