--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "build": "webpack --config config/webpack.prod.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
+    "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "autoprefixer": "^10.4.13",
-    "babel-loader": "^9.1.2",
-    "bable-loader": "^0.0.1-security",
     "css-loader": "^6.7.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
@@ -33,6 +30,7 @@
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-order": "^6.0.2",
     "stylelint-webpack-plugin": "^4.0.0",
+    "texsaur": "^0.6.1",
     "three": "^0.149.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
@@ -41,7 +39,5 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
-  "dependencies": {
-    "@types/three": "^0.149.0"
-  }
+  "dependencies": {}
 }
