--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "removeComments": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true,
-    "moduleResolution": "node"
+    "allowJs": false,
+    "moduleResolution": "node",
+    "jsx": "react",
+    "jsxFactory": "jsx",
+    "jsxFragmentFactory": "jsx.Fragment"
   }
 }
